deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alfred
  namespace: alfred
spec:
  type: ClusterIP
  selector:
    app: alfred
  ports:
    - name: http
      port: 8080
      targetPort: http
